manifest/objects/Apttus__APTS_Admin__c.object
<CustomObject>
    <description>Store admin preferences and metadata</description>
    <fields>
        <fullName>Apttus__Code__c</fullName>
        <label>Code</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus__Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Admin</label>
    <listViews>
        <fullName>Apttus__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus__Value__c</columns>
        <columns>Apttus__Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Admin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Apttus__Document_Password_Validation</fullName>
        <active>true</active>
        <description>Document password cannot be blank</description>
        <errorConditionFormula>IF(AND( Name == &quot;APTS_Password&quot;, Apttus__Value__c == &quot;&quot;), true, false)</errorConditionFormula>
        <errorDisplayField>Apttus__Value__c</errorDisplayField>
        <errorMessage>Password cannot be blank</errorMessage>
    </validationRules>
</CustomObject>